# Josefin

./: ByteportHandler.c  ByteportReport.py  CMakeCache.txt  CMakeLists.txt  DumpInfo  Dumptydning  Josefin  Josefin-rcStartScript.sh  JosefinStartScript.sh  KeyboardBut.c  KeyboardButIO.c  KeyboardButLCD.c  KeyboardIO.h  KeyboardKnob.c  Main.c  Main.h  Makefile  MakefileBB  NOT USED ByteportReport.py  NOT USED Josefin-rcStartScript.sh  NOT USED Socket-Client.c  OWHndlrOWFSFile.c  OWHndlrOWFSFile.h  OneWireHandler.c  OneWireHandlerFile.c  OneWireHandlerFile.h  OneWireHandlerHA7S.c  OneWireHandlerHA7S.h  OneWireHandlerOWFSFile.c  OneWireHandlerOWFSFile.h  README.txt  RPIstart1Wire.sh  SetEnvironment.sh  SimpleGPIO.c  SimpleGPIO.h  SockClient.c  SockSrv.c  SockSrv.h  SocketClient.c  SocketServer.c  (+18 more)
Bakgrund/: New Microsoft Word Document.docx  Vattenmätare.xls
